test/parser.d/invalid/type-constructors-2.souc.bad
p = (3 , 4): Pair(Integer, Integer)
